Remove the explicit disabling of UseBiasedLocking as it is the default since jdk15
https://openjdk.org/jeps/374

 patch by Mick Semb Wever; reviewed by Brandon Williams, Ekaterina Dimitrova for CASSANDRA-17869